<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="#2b7de1">
        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true">
                <ImageView
                        android:id="@+id/about_app_icon"
                        android:layout_width="96dp"
                        android:layout_height="96dp"
                        android:src="@drawable/app_icon_big"
                        android:layout_centerHorizontal="true"/>
                <TextView
                        android:id="@+id/about_app_name"
                        android:text="@string/boot_app_name"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerHorizontal="true"
                        android:layout_below="@id/about_app_icon"
                        android:textSize="50sp"
                        android:textIsSelectable="false"
                        android:textColor="@android:color/white"/>
                <TextView
                        android:id="@+id/about_app_version"
                        android:text="@string/app_version"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/about_app_name"
                        android:layout_centerHorizontal="true"
                        android:layout_marginTop="4dp"
                        android:textSize="24sp"
                        android:textIsSelectable="false"
                        android:textColor="@android:color/white"/>
                <TextView
                        android:id="@+id/about_company"
                        android:text="@string/about_company"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/about_app_version"
                        android:layout_centerHorizontal="true"
                        android:layout_marginTop="24dp"
                        android:textSize="16sp"
                        android:textIsSelectable="false"
                        android:textColor="@android:color/white"/>
                <RelativeLayout
                        android:id="@+id/about_author"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/about_company"
                        android:layout_centerHorizontal="true"
                        android:layout_marginTop="24dp">
                        <ImageView
                                android:id="@+id/about_author_avatar"
                                android:layout_width="48dp"
                                android:layout_height="48dp"
                                android:src="@drawable/author_avatar"
                                android:scaleType="centerCrop"/>
                        <TextView
                                android:id="@+id/about_author_name"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_toRightOf="@id/about_author_avatar"
                                android:layout_alignBottom="@id/about_author_avatar"
                                android:layout_marginLeft="8dp"
                                android:textColor="@android:color/white"
                                android:text="@string/author_info"/>
                </RelativeLayout>
                <RelativeLayout
                        android:id="@+id/about_icon_designer"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/about_author"
                        android:layout_alignLeft="@id/about_author"
                        android:layout_marginTop="16dp">
                        <ImageView
                                android:id="@+id/about_icon_designer_avatar"
                                android:layout_width="48dp"
                                android:layout_height="48dp"
                                android:src="@drawable/icon_designer_avatar"
                                android:scaleType="centerCrop"/>
                        <TextView
                                android:id="@+id/about_icon_designer_name"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_toRightOf="@id/about_icon_designer_avatar"
                                android:layout_alignBottom="@id/about_icon_designer_avatar"
                                android:layout_marginLeft="8dp"
                                android:textColor="@android:color/white"
                                android:text="@string/icon_designer_info"/>
                </RelativeLayout>
                <Button
                        android:id="@+id/about_rate_button"
                        android:layout_width="fill_parent"
                        android:layout_height="48dp"
                        android:layout_below="@id/about_icon_designer"
                        android:layout_marginTop="24dp"
                        android:background="@drawable/rate_button_selector"
                        android:textColor="@android:color/white"
                        android:textSize="14sp"
                        android:text="@string/rate_me"/>
        </RelativeLayout>
        <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_alignParentBottom="true"
                android:layout_marginBottom="12dp">
                <TextView
                        android:text="@string/icons_8_link"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@android:color/white"
                        android:textSize="12sp"
                        android:textIsSelectable="false"
                        android:autoLink="all"/>
        </RelativeLayout>
</RelativeLayout>