<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:app="http://schemas.android.com/apk/res-auto"
                android:layout_width="match_parent"
                android:layout_height="match_parent">
	<RelativeLayout
			android:layout_width="match_parent"
			android:layout_height="match_parent"
			android:layout_marginTop="56dp"
			android:layout_marginBottom="56dp">
		<RelativeLayout
				android:id="@+id/playlist_header"
				android:layout_width="match_parent"
				android:layout_height="wrap_content">
			<moetune.moeTuneComponents.RectImageView
					android:id="@+id/playlist_image"
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:src="@drawable/album_default"
					android:scaleType="centerCrop"/>
			<FrameLayout
					android:layout_width="match_parent"
					android:layout_height="match_parent"
					android:layout_alignBottom="@id/playlist_image"
					android:layout_alignLeft="@id/playlist_image"
					android:layout_alignRight="@id/playlist_image"
					android:layout_alignTop="@id/playlist_image"
					android:background="#44000000"/>
			<TextView
					android:id="@+id/playlist_name"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:layout_alignBottom="@id/playlist_image"
					android:layout_marginBottom="8dp"
					android:layout_marginLeft="24dp"
					android:textColor="@android:color/white"
					android:textSize="32dp"
					android:text="Magical Selection"/>
			<TextView
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:layout_above="@id/playlist_name"
					android:layout_marginLeft="24dp"
					android:textColor="@android:color/white"
					android:textSize="14dp"
					android:text="Now Playing List"/>
		</RelativeLayout>
		<moetune.moeTuneComponents.MoeTuneMusicListView
				android:id="@+id/playlist_list"
				android:layout_width="match_parent"
				android:layout_height="match_parent"
				android:divider="@android:color/transparent"
				android:dividerHeight="0dp"
				android:background="#00000000"
				android:listSelector="@android:color/transparent"
				android:scrollbars="vertical"
				android:scrollbarSize="0dp"
				android:scrollbarStyle="outsideOverlay"
				android:scrollbarThumbVertical="@drawable/scrollbar_vertical_thumb"/>
	</RelativeLayout>
	<FrameLayout
			android:id="@+id/playlist_cover"
			android:layout_width="match_parent"
			android:layout_height="match_parent"
			android:background="#66000000"
			android:visibility="visible"/>
	<RelativeLayout
			android:id="@+id/music_info_card_shadow"
			android:layout_width="match_parent"
			android:layout_height="4dp"
			android:background="@drawable/album_shadow"
			android:alpha="0.6"/>
	<moetune.moeTuneComponents.ToggleRelativeLayout
			android:id="@+id/music_info_card"
			android:layout_width="match_parent"
			android:layout_height="match_parent"
			android:background="@android:color/white"
			android:visibility="visible">
		<View
				android:id="@+id/what_button"
				android:layout_width="match_parent"
				android:layout_height="match_parent"
				android:background="#00000000"/>
		<RelativeLayout
				android:id="@+id/album_area"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_alignParentTop="true">
			<moetune.moeTuneComponents.SquareImageView
					android:id="@+id/temp_album_image"
					android:layout_width="match_parent"
					android:layout_height="match_parent"
					android:layout_alignParentTop="true"
					android:layout_centerHorizontal="true"
					android:scaleType="centerCrop"
					android:background="#2b7de1"
					android:visibility="gone"/>
			<moetune.moeTuneComponents.SquareImageView
					android:id="@+id/album_image"
					android:layout_width="match_parent"
					android:layout_height="match_parent"
					android:layout_alignParentTop="true"
					android:layout_centerHorizontal="true"
					android:scaleType="centerCrop"
					android:background="@drawable/album_default"/>
			<RelativeLayout
					android:layout_width="match_parent"
					android:layout_height="4dp"
					android:layout_alignBottom="@id/album_image">
				<ProgressBar
						android:id="@+id/music_progress"
						android:layout_width="match_parent"
						android:layout_height="4dp"
						android:progress="0"
						android:max="10000"
						android:secondaryProgress="0"
						style="@android:style/Widget.ProgressBar.Horizontal"
						android:progressDrawable="@drawable/progress_bar"/>
				<FrameLayout
						android:layout_width="match_parent"
						android:layout_height="1dp"
						android:layout_alignParentTop="true"
						android:background="@drawable/progress_bar_line"/>
				<FrameLayout
						android:layout_width="match_parent"
						android:layout_height="1dp"
						android:layout_alignParentBottom="true"
						android:background="@drawable/progress_bar_line"/>
			</RelativeLayout>
		</RelativeLayout>

		<FrameLayout
				android:layout_width="match_parent"
				android:layout_height="56dp"
				android:background="@drawable/toolbar_shadow"/>
		<Button
				android:id="@+id/open_playlist_button"
				android:layout_width="56dp"
				android:layout_height="56dp"
				android:background="@drawable/icon_expand_selector"
				android:layout_alignParentRight="true"/>
		<TextView
				android:id="@+id/album_message"
				android:layout_width="fill_parent"
				android:layout_height="wrap_content"
				android:layout_alignBottom="@id/album_area"
				android:layout_centerHorizontal="true"
				android:layout_marginBottom="12dp"
				android:textColor="@android:color/white"
				android:gravity="center"
				android:textSize="16sp"
				android:text="@string/album_loading"/>

		<RelativeLayout
				android:id="@+id/album_info_area"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_below="@id/album_area"
				android:paddingTop="2dp"
				android:paddingBottom="2dp"
				android:layout_marginTop="6dp"
				android:layout_marginBottom="60dp">
			<RelativeLayout
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:id="@+id/progress_info">
				<moetune.moeTuneComponents.SquareImageView
						android:id="@+id/now_playing_icon"
						android:layout_width="12dp"
						android:layout_height="12dp"
						android:src="@drawable/icon_play"
						android:layout_marginLeft="16dip"
						android:layout_centerVertical="true"/>
				<TextView
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						android:textColor="#2b7de1"
						android:textSize="12sp"
						android:layout_toRightOf="@id/now_playing_icon"
						android:layout_alignParentTop="true"
						android:paddingLeft="6dip"
						android:text="@string/now_playing_default"
						android:layout_centerVertical="true"/>
				<TextView
						android:id="@+id/time_duration"
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						android:textColor="#2b7de1"
						android:textSize="12sp"
						android:layout_alignParentRight="true"
						android:layout_alignParentTop="true"
						android:layout_marginRight="16dip"
						android:text="@string/time_duration_default"
						android:layout_centerVertical="true"/>
				<TextView
						android:id="@+id/time_current"
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						android:textColor="#2b7de1"
						android:textSize="12sp"
						android:layout_alignParentTop="true"
						android:layout_toLeftOf="@id/time_duration"
						android:text="@string/time_current_default"
						android:layout_centerVertical="true"/>

			</RelativeLayout>
			<TextView
					android:id="@+id/album_name"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:layout_alignParentBottom="true"
					android:layout_alignParentLeft="true"
					android:layout_marginLeft="16dp"
					android:layout_marginBottom="0dp"
					android:textColor="#2b7de1"
					android:textSize="16sp"
					android:text="@string/album_name_default"/>
			<TextView
					android:id="@+id/artist_name"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:layout_alignParentLeft="true"
					android:layout_above="@id/album_name"
					android:layout_marginLeft="16dp"
					android:textColor="#2b7de1"
					android:textSize="16sp"
					android:singleLine="true"
					android:text="@string/artist_name_default"/>
			<RelativeLayout
					android:layout_width="fill_parent"
					android:layout_height="fill_parent"
					android:layout_alignParentLeft="true"
					android:layout_above="@id/artist_name"
					android:layout_below="@id/progress_info">
				<TextView
						android:id="@+id/song_title"
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						android:layout_centerVertical="true"
						android:layout_marginLeft="16dp"
						android:layout_marginRight="16dp"
						android:textSize="24sp"
						android:textStyle="bold"
						android:textColor="#2b7de1"
						android:scrollbars="vertical"
						android:scrollbarSize="0dp"
						android:scrollbarStyle="outsideOverlay"
						android:scrollbarThumbVertical="@drawable/scrollbar_vertical_thumb"
						android:text="@string/song_title_default"/>
			</RelativeLayout>
		</RelativeLayout>
		<FrameLayout
				android:layout_width="match_parent"
				android:layout_height="1dp"
				android:background="#2b7de1"
				android:layout_marginBottom="56dp"
				android:layout_alignParentBottom="true"/>
		<RelativeLayout
				android:id="@+id/playlist_bar"
				android:layout_width="match_parent"
				android:layout_height="56dp"
				android:background="#2b7de1"
				android:layout_alignParentBottom="true">
			<TextView
					android:id="@+id/playlist_title"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:layout_centerVertical="true"
					android:layout_marginLeft="56dp"
					android:layout_alignParentLeft="true"
					android:textColor="@android:color/white"
					android:textSize="20sp"
					android:text="@string/playlist_title"
					android:visibility="gone"/>
			<TextView
					android:id="@+id/playlist_swipe_hint"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:layout_centerInParent="true"
					android:textColor="@android:color/white"
					android:textSize="18sp"
					android:text="@string/playlist_swipe_hint"
					android:visibility="visible"/>
			<moetune.moeTuneComponents.SquareImageView
					android:id="@+id/playlist_album_image"
					android:layout_width="56dp"
					android:layout_height="56dp"
					android:layout_alignParentRight="true"
					android:scaleType="centerCrop"
					android:background="@drawable/album_default"
					android:visibility="gone"
					android:clickable="true"/>
		</RelativeLayout>
	</moetune.moeTuneComponents.ToggleRelativeLayout>
	<RelativeLayout
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_alignParentBottom="true"
			android:visibility="visible">
		<RelativeLayout
				android:id="@+id/control_panel"
				android:layout_width="match_parent"
				android:layout_height="56dip"
				android:layout_alignParentBottom="true"
				android:background="@android:color/white"
				android:visibility="visible">
			<RelativeLayout
					android:layout_width="match_parent"
					android:layout_height="match_parent">

				<moetune.moeTuneComponents.SquareImageView
						android:id="@+id/button_play_icon"
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						android:layout_centerHorizontal="true"
						android:layout_centerVertical="true"
						android:src="@drawable/icon_play"
						android:paddingTop="8dp"
						android:paddingBottom="8dp"/>
				<Button android:layout_width="wrap_content"
				        android:layout_height="wrap_content"
				        android:id="@+id/button_play"
				        android:enabled="false"
				        android:layout_alignBottom="@id/button_play_icon"
				        android:layout_alignTop="@id/button_play_icon"
				        android:layout_alignRight="@id/button_play_icon"
				        android:layout_alignLeft="@id/button_play_icon"
				        android:background="#00000000"/>
				<moetune.moeTuneComponents.SquareImageView
						android:id="@+id/button_next_icon"
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						android:src="@drawable/icon_next"
						android:layout_toRightOf="@id/button_play_icon"
						android:layout_marginLeft="20dp"
						android:paddingTop="11dp"
						android:paddingBottom="11dp"/>
				<Button android:layout_width="wrap_content"
				        android:layout_height="wrap_content"
				        android:id="@+id/button_next"
				        android:enabled="false"
				        android:layout_alignBottom="@id/button_next_icon"
				        android:layout_alignTop="@id/button_next_icon"
				        android:layout_alignRight="@id/button_next_icon"
				        android:layout_alignLeft="@id/button_next_icon"
				        android:background="#00000000"/>
				<moetune.moeTuneComponents.SquareImageView
						android:id="@+id/button_prev_icon"
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						android:src="@drawable/icon_prev"
						android:layout_toLeftOf="@id/button_play_icon"
						android:layout_marginRight="20dp"
						android:paddingTop="11dp"
						android:paddingBottom="11dp"/>
				<Button android:layout_width="wrap_content"
				        android:layout_height="wrap_content"
				        android:id="@+id/button_prev"
				        android:enabled="false"
				        android:layout_alignBottom="@id/button_prev_icon"
				        android:layout_alignTop="@id/button_prev_icon"
				        android:layout_alignRight="@id/button_prev_icon"
				        android:layout_alignLeft="@id/button_prev_icon"
				        android:background="#00000000"/>
			</RelativeLayout>
		</RelativeLayout>
		<FrameLayout
				android:id="@+id/bottom_line"
				android:layout_width="match_parent"
				android:layout_height="1dp"
				android:background="#2b7de1"
				android:layout_above="@id/control_panel"
				android:visibility="visible"/>
		<FrameLayout
				android:id="@+id/bottom_shadow"
				android:layout_width="match_parent"
				android:layout_height="3dp"
				android:alpha="0.3"
				android:background="@drawable/album_shadow_inverse"
				android:layout_above="@id/bottom_line"
				android:visibility="visible"/>
	</RelativeLayout>

	<View
			android:id="@+id/status_bar_background"
			android:layout_width="match_parent"
			android:layout_height="25dp"
			android:background="@color/status_bar_color_solid"
			android:visibility="gone"/>

	<Button android:layout_width="48dp"
	        android:layout_height="48dp"
	        android:layout_alignBottom="@id/music_info_card"
	        android:layout_alignRight="@id/music_info_card"
	        android:layout_marginRight="12dp"
	        android:layout_marginBottom="12dp"
	        android:background="@drawable/moetune_button_round"
	        android:visibility="gone"
	        android:id="@+id/mode_selector"/>
	<Button android:layout_width="match_parent"
	        android:layout_height="match_parent"
	        android:id="@+id/mode_list_cover"
	        android:visibility="gone"
	        android:background="#00000000"/>
	<android.support.v7.widget.CardView
			android:id="@+id/mode_list_card"
			android:layout_width="130dp"
			android:layout_height="175dp"
			android:layout_marginRight="3dp"
			android:layout_marginBottom="7dp"
			android:layout_alignBottom="@id/music_info_card"
			android:layout_alignRight="@id/music_info_card"
			app:cardUseCompatPadding="true"
			app:cardBackgroundColor="#FFFFFF"
			android:visibility="gone">
		<ListView android:layout_width="wrap_content"
		          android:layout_height="wrap_content"
		          android:layout_centerInParent="true"
		          android:layout_margin="8dp"
		          android:dividerHeight="0dp"
		          android:choiceMode="singleChoice"
		          android:divider="@android:color/transparent"
		          android:id="@+id/mode_list"/>
	</android.support.v7.widget.CardView>
</RelativeLayout>